--- a/app/src/main/res/layout/tvshowsfragment.xml
+++ b/app/src/main/res/layout/tvshowsfragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="@color/colorPrimary"
     android:layout_width="match_parent"
@@ -64,6 +65,15 @@
                 android:id="@+id/movies_recycler4_tv_popular"
                 />
         </LinearLayout>
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView_tvshow_fragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            ads:adSize="BANNER"
+            android:layout_gravity="center"
+            ads:adUnitId="@string/banner2_ad_unit_id">
+        </com.google.android.gms.ads.AdView>
         <LinearLayout
             android:orientation="vertical"
             android:id="@+id/card_view5"
@@ -104,7 +114,9 @@
                 android:layout_height="match_parent"
                 android:id="@+id/movies_recycler5_tv_toprated"
                 />
+
         </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
