--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="duskYellow" >#ffe046</color>
     <color name="lightYellow" >#f4c010</color>
     <color name="medium_grey">#ffffff</color>
+    <color name="transparent">#00ffffff</color>
 
 </resources>
