--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -69,8 +69,8 @@
                 style="?android:attr/progressBarStyleLarge"
                 android:indeterminateDrawable="@drawable/progress"
                 />
-        </android.support.v7.widget.CardView>
 
+        </android.support.v7.widget.CardView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,20 +101,37 @@
                 android:id="@+id/year"
                 />
 
-            <TextView
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="rpwierpweoirpwiepdsfsdfdsf fsdfsdfdsf fsdffsd  fsdfriewpriw sfsfsdfdsfsdfsdfsdfsdfepr"
-                android:textSize="12sp"
-                android:ellipsize="end"
-                android:maxLines="3"
-                android:textColor="@color/white"
-                android:id="@+id/overview"
-                />
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="rpwierpweoirpwiepgdf fdgfg   gfdgd fg   gdfgdfg fdg d dfd dfgdf  dsfsdfdsf fsdfsdfdsf fsdffsd  fsdfriewpriw sfsfsdfdsfsdfsdfsdfsdfepr"
+                    android:textSize="10sp"
+                    android:ellipsize="end"
+                    android:maxLines="3"
+                    android:layout_weight="6"
+                    android:textColor="@color/white"
+                    android:id="@+id/overview"
+                    />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:src="@drawable/if_download_1031520"
+                    />
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
 
     </RelativeLayout>
+
 
 </LinearLayout>
