--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -112,7 +112,7 @@
                     android:text="rpwierpweoirpwiepgdf fdgfg   gfdgd fg   gdfgdfg fdg d dfd dfgdf  dsfsdfdsf fsdfsdfdsf fsdffsd  fsdfriewpriw sfsfsdfdsfsdfsdfsdfsdfepr"
                     android:textSize="10sp"
                     android:ellipsize="end"
-                    android:maxLines="3"
+                    android:maxLines="4"
                     android:layout_weight="6"
                     android:textColor="@color/white"
                     android:id="@+id/overview"
@@ -121,6 +121,7 @@
                     android:layout_width="0dp"
                     android:layout_height="20dp"
                     android:layout_weight="1"
+                    android:id="@+id/download_icon"
                     android:layout_gravity="center"
                     android:src="@drawable/if_download_1031520"
                     />
