--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -134,7 +134,7 @@
             android:gravity="center"
             android:layout_margin="3dp"
             android:layout_weight="0.7"
-            android:textSize="10sp"
+            android:textSize="8sp"
             android:textStyle="bold"
             android:background="@drawable/oval"
             android:layout_gravity="center"
@@ -223,11 +223,26 @@
             />
     </LinearLayout>
 
+
 <View
     android:layout_width="match_parent"
     android:layout_height="1dp"
     android:background="@color/medium_grey"
     />
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:text="Determine Location"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_margin="3dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:background="@drawable/oval"
+        android:layout_gravity="center"
+        android:id="@+id/determine_location"
+        />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="54dp"
