--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="lightYellow" >#f4c010</color>
     <color name="medium_grey">#ffffff</color>
     <color name="transparent">#00ffffff</color>
+    <color name="transparenjjt">#b8000000</color>
 
 </resources>
