--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -110,31 +110,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="2598"
+            android:text="2598 points"
             android:textColor="@color/white"
             android:textSize="18sp"
-
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="points"
-            android:textColor="@color/white"
-            android:gravity="center_vertical"
-            android:layout_margin="3dp"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:textSize="18sp"
+            android:id="@+id/points"
             />
+
         <Button
             android:layout_width="0dp"
             android:layout_height="30dp"
             android:text="Add Points"
-            android:padding="5dp"
+            android:padding="3dp"
             android:textColor="@color/black"
             android:gravity="center"
             android:layout_margin="3dp"
-            android:layout_weight="0.7"
-            android:textSize="8sp"
+            android:layout_weight="1"
+            android:textSize="10sp"
             android:textStyle="bold"
             android:background="@drawable/oval"
             android:layout_gravity="center"
