--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
+    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fillViewport="true">
-
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="@color/lightcolor">
-
+    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="30dp"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:id="@+id/background_layout_signup"
+    android:background="@drawable/animation_list">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="Create account"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:textSize="22sp"
+        android:layout_marginBottom="5dp"
+        fontPath="fonts/brownregular.ttf"
+        />
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
@@ -26,6 +38,7 @@
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/if_sed_10_2232321"
+               android:tint="@color/white"
                />
            <Button
                android:layout_width="50dp"
@@ -39,148 +52,224 @@
                />
 
        </RelativeLayout>
-        <TextView
-            android:text="Full Name"
-            fontPath="fonts/brownregular.ttf"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
 
-        <EditText
-            android:id="@+id/full_name"
+
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Full Name"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginBottom="5dp"
+                fontPath="fonts/brownregular.ttf"
+                />
+            <EditText
+                android:id="@+id/full_name"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:paddingLeft="10dp"
+                android:focusedByDefault="true"
+                fontPath="fonts/brownregular.ttf"
+                android:background="@drawable/rounded_edittext"
+                android:imeOptions="actionNext"
+                android:backgroundTint="@color/white"
+                android:inputType="text"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="This appears on your plex profile."
+                android:textStyle="normal"
+                android:textSize="10sp"
+                android:layout_marginBottom="5dp"
+                fontPath="fonts/brownregular.ttf"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Email"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginBottom="5dp"
+                fontPath="fonts/brownregular.ttf"
+                />
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:paddingLeft="10dp"
+                fontPath="fonts/brownregular.ttf"
+                android:background="@drawable/rounded_edittext"
+                android:imeOptions="actionNext"
+                android:backgroundTint="@color/white"
+                android:inputType="text"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="You 'll need to confirm this email later."
+                android:textStyle="normal"
+                android:textSize="10sp"
+                android:layout_marginBottom="5dp"
+                fontPath="fonts/brownregular.ttf"
+                />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Password"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginBottom="5dp"
+                fontPath="fonts/brownregular.ttf"
+                />
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:paddingLeft="10dp"
+                fontPath="fonts/brownregular.ttf"
+                android:background="@drawable/rounded_edittext"
+                android:imeOptions="actionNext"
+                android:backgroundTint="@color/white"
+                android:inputType="textPassword"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Use at least eight characters."
+                android:textStyle="normal"
+                android:textSize="10sp"
+                android:layout_marginBottom="5dp"
+                fontPath="fonts/brownregular.ttf"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="5dp"
+            android:visibility="visible"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Phone"
+                android:textStyle="bold"
+                android:textSize="16sp"
+                android:layout_marginBottom="5dp"
+                fontPath="fonts/brownregular.ttf"
+                />
+            <EditText
+                android:id="@+id/phone"
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:paddingLeft="10dp"
+                fontPath="fonts/brownregular.ttf"
+                android:background="@drawable/rounded_edittext"
+                android:imeOptions="actionNext"
+                android:backgroundTint="@color/white"
+                android:inputType="text"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
+                />
+        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="5dp"
+        android:visibility="visible"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="What's your date of birth?"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:layout_marginBottom="5dp"
+            fontPath="fonts/brownregular.ttf"
+            />
+        <Button
+            android:id="@+id/Date_of_Birth"
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:paddingLeft="10dp"
+            fontPath="fonts/brownregular.ttf"
+            android:background="@drawable/rounded_edittext"
+            android:imeOptions="actionNext"
+            android:backgroundTint="@color/white"
             android:inputType="text"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:textColorHint="@color/black"
+            android:textColor="@color/black"
+            />
+    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="@string/terms_of_service"
+        android:textStyle="normal"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        fontPath="fonts/airbnb.ttf"
+        />
 
-        <TextView
-            android:text="Email"
-            fontPath="fonts/brownregular.ttf"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <EditText
-            android:id="@+id/email"
-            android:textColor="@color/colorPrimaryDark"
-            android:layout_width="match_parent"
-            android:inputType="textEmailAddress"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            fontPath="fonts/brownregular.ttf"
-            android:textColor="@color/white"
-            android:text="Password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <EditText
-            android:id="@+id/password"
-            android:textColor="@color/colorPrimaryDark"
-            android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
-        <TextView
-            android:textColor="@color/white"
-            android:text="Phone Number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <EditText
-            android:id="@+id/phone"
-            fontPath="fonts/brownregular.ttf"
-            android:textColor="@color/colorPrimaryDark"
-            android:inputType="textEmailAddress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:orientation="horizontal"
-               android:layout_margin="5dp"
-               >
-               <RelativeLayout
-                   android:layout_width="60dp"
-                   android:layout_gravity="center"
-                   android:layout_height="wrap_content"
-                   android:orientation="horizontal">
-
-
-                   <com.vacuum.app.plex.Utility.CustomSpinner
-                       android:id="@+id/spinner_days"
-                       android:background="@android:color/transparent"
-                       android:verticalScrollbarPosition="left"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:layout_centerHorizontal="true"
-                       android:layout_centerVertical="true"/>
-
-                   <ImageView
-                       android:layout_width="25dp"
-                       android:layout_height="25dp"
-                       android:layout_alignParentRight="true"
-                       android:layout_centerVertical="true"
-                       android:layout_gravity="center"
-                       app:srcCompat="@drawable/if_arrow_down"
-                       tools:ignore="VectorDrawableCompat" />
-
-               </RelativeLayout>
-               <RelativeLayout
-                   android:layout_width="100dp"
-                   android:layout_gravity="center"
-                   android:layout_height="wrap_content"
-                   android:orientation="horizontal">
-
-                   <Spinner
-                       android:id="@+id/spinner_months"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:background="@android:color/transparent"
-                       android:gravity="center"
-                       android:spinnerMode="dropdown" />
-
-                   <ImageView
-                       android:layout_width="25dp"
-                       android:layout_height="25dp"
-                       android:layout_alignParentRight="true"
-                       android:layout_centerVertical="true"
-                       android:layout_gravity="center"
-                       app:srcCompat="@drawable/if_arrow_down"
-                       tools:ignore="VectorDrawableCompat" />
-
-               </RelativeLayout>
-               <RelativeLayout
-                   android:layout_width="80dp"
-                   android:layout_gravity="center"
-                   android:layout_height="wrap_content"
-                   android:orientation="horizontal">
-
-                   <Spinner
-                       android:id="@+id/spinner_years"
-                       android:layout_width="match_parent"
-                       android:layout_height="wrap_content"
-                       android:background="@android:color/transparent"
-                       android:gravity="center"
-                       android:spinnerMode="dropdown" />
-
-                   <ImageView
-                       android:layout_width="25dp"
-                       android:layout_height="25dp"
-                       android:layout_alignParentRight="true"
-                       android:layout_centerVertical="true"
-                       android:layout_gravity="center"
-                       app:srcCompat="@drawable/if_arrow_down"
-                       tools:ignore="VectorDrawableCompat" />
-
-               </RelativeLayout>
-           </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="@string/terms_of_service2"
+        android:textStyle="normal"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        fontPath="fonts/airbnb.ttf"
+        />
             <Button
                 android:layout_width="250dp"
                 android:layout_height="40dp"
@@ -191,20 +280,28 @@
                 android:layout_margin="10dp"
                 android:textSize="15sp"
                 android:textStyle="bold"
+                android:backgroundTint="@color/white"
                 android:background="@drawable/oval"
                 android:layout_gravity="center"
                 android:id="@+id/determine_location"
                 />
 
-
-            <Button
-                android:id="@+id/buttonRegister"
-                android:text="Register"
-                android:layout_marginTop="200dp"
-                android:textColor="@color/duskYellow"
-                android:background="@color/colorPrimaryDark"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:text="Register"
+        android:padding="5dp"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:layout_margin="10dp"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:backgroundTint="@color/white"
+        android:background="@drawable/oval"
+        android:layout_gravity="center"
+        android:id="@+id/buttonRegister"
+        />
 
     </LinearLayout>
+
 </ScrollView>
