Fix issues & bugs

--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -16,6 +16,7 @@
         android:rotation="180"
         android:tint="@color/white"
         android:layout_margin="10dp"
+        android:id="@+id/back_login_fragment"
         />
 
     <RelativeLayout
