--- a/app/src/main/res/layout/home_splash_screen.xml
+++ b/app/src/main/res/layout/home_splash_screen.xml
@@ -11,6 +11,7 @@
     <VideoView
         android:id="@+id/videoview"
         android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
         android:layout_height="match_parent"/>
     <ImageView
         android:layout_width="match_parent"
